Add form to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <script src="script.js"></script>
 </head>
 <body>
-  
+  <h1>Awesome Library</h1>
+  <div class="books">
+    
+  </div>
+  <form action="#">
+    <input type="text" placeholder="Title">
+    <input type="text" placeholder="Author">
+    <button type="submit">Add</button> 
+  </form>
 </body>
 </html>
