--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome Books</title>
-  <script src="script.js"></script>
+  
 </head>
 <body>
   <h1>Awesome Library</h1>
-  <div class="books">
-    
-  </div>
+  <p id="boo">
+   
+  </p>
   <form action="#">
-    <input type="text" placeholder="Title">
-    <input type="text" placeholder="Author">
+    <input type="text" placeholder="Title"></form><br>
+    <input type="text" placeholder="Author"><br><br>
     <button type="submit">Add</button> 
   </form>
+  <script>
+    function Books (title, author) {
+    this.title = title;
+    this.author = author;
+}
+
+const bookInfo = new Books("1984", "Author Name");
+
+
+document.getElementById("boo").innerHtml = bookInfo.title + bookInfo.author;
+  </script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
