--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
   <h1>Awesome Library</h1>
-  
+  <div>
+    <ul id="bookList">
+      <li>dsada</li>
+    </ul>
+  </div>
   <form action="#">
     <input type="text" placeholder="Title" id="title"></form><br>
     <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="addBook()">Add</button> 
+    <button type="button" onclick="addBook(), displayBooks()">Add</button> 
   </form>
-
+  
   <script src="script.js"></script>
 </body>
 </html>
