Update display book function

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <h1>Awesome Library</h1>
   <div>
     <ul id="bookList">
-      <li>dsada</li>
+ 
     </ul>
   </div>
   <form action="#">
     <input type="text" placeholder="Title" id="title"></form><br>
     <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="addBook(), displayBooks()">Add</button> 
+    <button type="button" onclick="addBook(); displayBooks()">Add</button> 
   </form>
   
   <script src="script.js"></script>
