--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Awesome Books</title>
   
 </head>
 <body>
   <h1>Awesome Library</h1>
   <div>
-    <ul id="bookList">
- 
-    </ul>
+    <ul id="bookList"></ul>
   </div>
   <form action="#">
     <input type="text" placeholder="Title" id="title"></form><br>
     <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="addBook(); displayBooks()">Add</button> 
+    <button type="button" onclick="addBook(); displayBooks()">Add New Book</button> 
   </form>
   
   <script src="script.js"></script>
