--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <form action="#">
     <input type="text" placeholder="Title" id="title"><br>
     <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="addBook(); displayBooks()">Add New Book</button> 
+    <button type="button" onclick="addBook()">Add New Book</button> 
   </form>
   <script src="script.js"></script>
 </body>
