Fix linter errors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input type="text" placeholder="Author" id="author"><br><br>
     <button type="button" onclick="addBook()">Add New Book</button> 
   </form>
+  <p id ="test"></p>
   <script src="script.js"></script>
 </body>
 </html>
