Create class and insert add book function in it

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <form action="#">
     <input type="text" placeholder="Title" id="title"><br>
     <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="addBook()">Add New Book</button> 
+    <button type="button" onclick="lib.addBook">Add New Book</button> 
   </form>
   <p id ="test"></p>
   <script src="script.js"></script>
