--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
+  
   <title>Awesome Books</title>
 </head>
-<body>
-  <h1>Awesome Library</h1>
-  <ul id="bookList">  
-  </ul>
-  <form action="#">
-    <input type="text" placeholder="Title" id="title"><br>
-    <input type="text" placeholder="Author" id="author"><br><br>
-    <button type="button" onclick="lib.addBook()">Add New Book</button> 
-  </form>
-  <p id ="test"></p>
+<body class="container text-center">
+  <div class="m-4 text-dark ">
+    <h1 class="display-3">Awesome Library</h1>
+  </div>
+  <div class="border w-50 m-auto">
+    <ul id="bookList" class="list-unstyled m-4">
+    </ul>
+  </div>
+  <div class="mt-4">
+    <form action="#">
+      <input type="text" placeholder="Title" id="title"><br>
+      <input type="text" placeholder="Author" id="author"><br><br>
+      <button type="button" onclick="lib.addBook()">Add New Book</button> 
+    </form>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 </html>
