--- a/index.html
+++ b/index.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap" rel="stylesheet">
-  
-  <title>Awesome Books</title>
-</head>
-<body class="container text-center">
-  <div class="m-4 text-dark ">
-    <h1 class="display-3">Awesome Library</h1>
-  </div>
-  <div class="border w-50 m-auto">
-    <ul id="bookList" class="list-unstyled m-4">
-    </ul>
-  </div>
-  <div class="mt-4">
-    <form action="#">
-      <input type="text" placeholder="Title" id="title"><br>
-      <input type="text" placeholder="Author" id="author"><br><br>
-      <button type="button" onclick="lib.addBook()">Add New Book</button> 
-    </form>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap"
+      rel="stylesheet"
+    />
+    <title>Awesome Books</title>
+  </head>
+  <body class="container text-center">
+    <div class="m-4">
+      <h1 class="display-3">Awesome Library</h1>
+    </div>
+    <div class="border border-3 rounded w-50 m-auto">
+      <ul id="bookList" class="list-unstyled"></ul>
+    </div>
+    <div class="mt-4 w-25 m-auto">
+      <h1 class="display-5 pt-3 border-top border-3">Add a new book</h1>
+      <form action="#">
+        <input
+          class="w-100 p-1 mt-2 border-2 rounded"
+          type="text"
+          placeholder="Title"
+          id="title"
+        /><br />
+        <input
+          class="w-100 p-1 mt-2 border-2 rounded"
+          type="text"
+          placeholder="Author"
+          id="author"
+        /><br />
+        <button
+          class="float-end mt-2 border-2 rounded"
+          type="button"
+          onclick="lib.addBook()"
+        >
+          Add New Book
+        </button>
+      </form>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
