Fix eslint errors and add required attribute to inputs

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
           type="text"
           placeholder="Title"
           id="title"
+          required
         /><br />
         <input
           class="w-100 p-1 mt-2 border-2 rounded"
           type="text"
           placeholder="Author"
           id="author"
+          required
         /><br />
         <button
           class="float-end mt-2 border-2 rounded"
-          type="button"
+          type="submit"
           onclick="lib.addBook()"
         >
           Add New Book
