--- a/index.html
+++ b/index.html
@@ -20,9 +20,24 @@
     <title>Awesome Books</title>
   </head>
   <body class="container text-center">
-    <div class="m-4">
-      <h1 class="display-3">Awesome Library</h1>
-    </div>
+    
+    <nav class="navbar navbar-expand-lg p-0 navbar-light bg-light border my-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Awesome Books</a>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item p-0">
+            <a class="nav-link p-1" href="#">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link p-1 border-end border-start" href="#">Add New</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link p-1" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="border border-3 rounded w-50 m-auto">
       <ul id="bookList" class="list-unstyled"></ul>
     </div>
