Add Footer section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         </button>
       </form>
     </div>
+
+    
+      <p class="m-5 bg-light border border-2 text-start ps-4 fs-5">Copyright &copy; 2021 By Ahmet & Elyor</p>
+    
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
