Add Contact section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <a class="navbar-brand" href="#">Awesome Books</a>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item p-0">
-            <a class="nav-link p-1" href="#">List</a>
+            <a class="nav-link p-1 bg-light " href="">List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-1 border-end border-start" href="#">Add New</a>
+            <a class="nav-link p-1 bg-light border-end border-start" href="">Add New</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link p-1" href="#">Contact</a>
+            <a class="nav-link p-1 bg-light " href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -41,9 +41,9 @@
     <div class="border border-3 rounded w-50 m-auto">
       <ul id="bookList" class="list-unstyled"></ul>
     </div>
-    <div class="mt-4 w-25 m-auto">
+    <div class="mt-5 w-25 m-auto text-center">
       <h1 class="display-5 pt-3 border-top border-3">Add a new book</h1>
-      <form action="#">
+      <form class="mb-5" action="#">
         <input
           class="w-100 p-1 mt-2 border-2 rounded"
           type="text"
@@ -66,9 +66,18 @@
           Add New Book
         </button>
       </form>
+    </div><br>
+
+    <div class="text-center m-5">
+      <h1 class="#">Contact Information</h1>
+      <p>Do you have any questions or you just want to say "Hello"?</p> 
+      <p class="#">You can reach out to us!</p>
+      <ul class="info w-25 m-auto">
+        <li>Our linkedIn: <a href="https://www.linkedin.com/in/ahmetbozaci/">Ahmet Bozaci</a> <a href="https://www.linkedin.com/in/elyor-doniyorov/">Elyor Doniyorov</a></li></li>
+        <li>Our Twitter: <a href="https://twitter.com/ahmtbozaci">Ahmet Bozaci</a> <a href="https://twitter.com/elyor-doniyorov">Elyor Doniyorov</a></li><br>
+      </ul>
     </div>
 
-    
       <p class="m-5 bg-light border border-2 text-start ps-4 fs-5">Copyright &copy; 2021 By Ahmet & Elyor</p>
     
     <script
