Add redirect to list page ability to add new button

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </div>
     </nav>
     
-    <div class=" w-50 m-auto" id="list-content">
+    <div class="w-50 mx-auto" id="list-content">
       <h1 class="fw-bold">All Awesome Books</h1> 
       <ul id="bookList" class="list-unstyled border border-3 rounded"></ul>
     </div>
 
     <div class="w-25 mx-auto text-center fs-3" id="add-new-content">
       <p class="fs-1  border-3">Add a new book</p>
-      <form action="#">
+      <form action="#list-content">
         <input
           class="w-100 p-1  border-2 rounded"
           type="text"
