--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <p>Do you have any questions or you just want to say "Hello"?</p> 
         <p class="#">You can reach out to us!</p>
         <ul class="info w-50 m-auto">
-          <li>Our linkedIn: <a href="https://www.linkedin.com/in/ahmetbozaci/">Ahmet Bozaci</a> <a href="https://www.linkedin.com/in/elyor-doniyorov/">Elyor Doniyorov</a></li></li>
-          <li>Our Twitter: <a href="https://twitter.com/ahmtbozaci">Ahmet Bozaci</a> <a href="https://twitter.com/elyor-doniyorov">Elyor Doniyorov</a></li><br>
+          <li>Our linkedIn: <a href="https://www.linkedin.com/in/ahmetbozaci/">Ahmet Bozaci</a> <a href="https://www.linkedin.com/in/elyor-doniyorov/">Elyor Doniyorov</a></li>
+          <li>Our Twitter: <a href="https://twitter.com/ahmtbozaci">Ahmet Bozaci</a> <a href="https://twitter.com/elyor-doniyorov">Elyor Doniyorov</a></li>
         </ul>
       </div>
     </div>
