--- a/index.html
+++ b/index.html
@@ -20,19 +20,32 @@
     <title>Awesome Books</title>
   </head>
   <body class="container text-center">
-    
-    <nav class="navbar navbar-expand-lg p-0 navbar-light bg-light border  mt-3 fs-2">
+    <nav
+      class="navbar navbar-expand-lg p-0 navbar-light bg-light border mt-3 fs-2"
+    >
       <div class="container-fluid">
         <a class="navbar-brand fs-2" href="#">Awesome Books</a>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item p-0">
-            <a class="nav-link p-1 bg-light" id="list-link" href="#list-content">List</a>
+            <a class="nav-link px-3 bg-light" id="list-link" href="#list-content"
+              >List</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link p-1 bg-light border-end border-start" id="add-new-link" href="#add-new-content">Add New</a>
+            <a
+              class="nav-link px-3 bg-light border-end border-start"
+              id="add-new-link"
+              href="#add-new-content"
+              >Add New</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link p-1 bg-light" id="contact-link" href="#contact-content">Contact</a>
+            <a
+              class="nav-link px-3 bg-light"
+              id="contact-link"
+              href="#contact-content"
+              >Contact</a
+            >
           </li>
         </ul>
       </div>
@@ -42,29 +55,29 @@
     </div>
 
     <div class="w-50 mx-auto" id="list-content">
-      <h1 class="fw-bold">All Awesome Books</h1> 
+      <h1 class="fw-bold">All Awesome Books</h1>
       <ul id="bookList" class="list-unstyled border border-3 rounded"></ul>
     </div>
 
     <div class="w-25 mx-auto text-center fs-3" id="add-new-content">
-      <p class="fs-1  border-3">Add a new book</p>
+      <p class="fs-1 border-3">Add a new book</p>
       <form action="#list-content">
         <input
-          class="w-100 p-1  border-2 rounded"
+          class="w-100 p-1 border-2 rounded"
           type="text"
           placeholder="Title"
           id="title"
           required
-        /><br />
+        />
         <input
           class="w-100 p-1 border-2 my-2 rounded"
           type="text"
           placeholder="Author"
           id="author"
           required
-        /><br />
+        />
         <button
-          class="float-end  border-2 rounded"
+          class="float-end border-2 rounded"
           type="submit"
           onclick="lib.addBook()"
         >
@@ -76,20 +89,31 @@
     <div class="text-center" id="contact-content">
       <p class="fs-1">Contact Information</p>
       <div class="fs-3">
-        <p>Do you have any questions or you just want to say "Hello"?</p> 
+        <p>Do you have any questions or you just want to say "Hello"?</p>
         <p class="#">You can reach out to us!</p>
-        <ul class="info w-50 m-auto">
-          <li>Our linkedIn: <a href="https://www.linkedin.com/in/ahmetbozaci/">Ahmet Bozaci</a> <a href="https://www.linkedin.com/in/elyor-doniyorov/">Elyor Doniyorov</a></li>
-          <li>Our Twitter: <a href="https://twitter.com/ahmtbozaci">Ahmet Bozaci</a> <a href="https://twitter.com/elyor-doniyorov">Elyor Doniyorov</a></li>
+        <ul class="w-50 m-auto contact">
+          <li>
+           LinkedIn:
+            <a href="https://www.linkedin.com/in/ahmetbozaci/">Ahmet Bozaci</a>
+            <a href="https://www.linkedin.com/in/elyor-doniyorov/"
+              >Elyor Doniyorov</a
+            >
+          </li>
+          <li>
+            Twitter:
+            <a href="https://twitter.com/ahmtbozaci">Ahmet Bozaci</a>
+            <a href="https://twitter.com/elyor-doniyorov">Elyor Doniyorov</a>
+          </li>
         </ul>
       </div>
     </div>
-        <div class=footer>
-      <p class="m-5 p-1 bg-light border border-2 text-start ps-4 fs-5">Copyright &copy; 2021 By Ahmet & Elyor</p>
-    
+
+    <div class="footer">
+      <p class="m-5 p-1 bg-light border border-2 text-start ps-4 fs-5">
+        Copyright &copy; 2021 By Ahmet & Elyor
+      </p>
     </div>
     <script src="https://moment.github.io/luxon/global/luxon.js"></script>
-
     <script src="script.js"></script>
   </body>
 </html>
