Add screenshot of page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       class="navbar navbar-expand-lg p-0 navbar-light bg-light border mt-3 fs-2"
     >
       <div class="container-fluid">
-        <a class="navbar-brand fs-2" href="#">Awesome Books</a>
+        <a class="navbar-brand fs-2" href="#list-content">Awesome Books</a>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item p-0">
             <a class="nav-link px-3 bg-light" id="list-link" href="#list-content"
