Add font class instead of universal selector

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="container text-center">
     <nav
-      class="navbar navbar-expand-lg p-0 navbar-light bg-light border mt-3 fs-2"
+      class="navbar navbar-expand-lg p-0 navbar-light bg-light border mt-3 fs-2 font"
     >
       <div class="container-fluid">
         <a class="navbar-brand fs-2" href="#list-content">Awesome Books</a>
@@ -50,16 +50,16 @@
         </ul>
       </div>
     </nav>
-    <div class="mb-5 text-end mt-1 fs-3">
+    <div class="mb-5 text-end mt-1 fs-3 font">
       <span id="local-time">time</span>
     </div>
 
-    <div class="w-50 mx-auto" id="list-content">
+    <div class="w-50 mx-auto list font" id="list-content">
       <h1 class="fw-bold">All Awesome Books</h1>
       <ul id="bookList" class="list-unstyled border border-3 rounded"></ul>
     </div>
 
-    <div class="w-25 mx-auto text-center fs-3" id="add-new-content">
+    <div class="w-25 mx-auto text-center fs-3 font" id="add-new-content">
       <p class="fs-1 border-3">Add a new book</p>
       <form action="#list-content">
         <input
@@ -86,7 +86,7 @@
       </form>
     </div>
 
-    <div class="text-center" id="contact-content">
+    <div class="text-center font" id="contact-content">
       <p class="fs-1">Contact Information</p>
       <div class="fs-3">
         <p>Do you have any questions or you just want to say "Hello"?</p>
