Arrange to folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -114,6 +114,6 @@
       </p>
     </div>
     <script src="https://moment.github.io/luxon/global/luxon.js"></script>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
