Add new screenshots and how to use instructions in readme

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <p class="fs-1">Contact Information</p>
       <div class="fs-3">
         <p>Do you have any questions or you just want to say "Hello"?</p>
-        <p class="#">You can reach out to us!</p>
+        <p>You can reach out to us!</p>
         <ul class="w-50 m-auto contact">
           <li>
            LinkedIn:
