--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <button
           class="float-end border-2 rounded"
           type="submit"
-          onclick="lib.addBook()"
+          onclick="addBook()"
         >
           Add New Book
         </button>
@@ -113,7 +113,7 @@
         Copyright &copy; 2021 By Ahmet & Elyor
       </p>
     </div>
-    <script src="https://moment.github.io/luxon/global/luxon.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/main.js">
+    </script>
   </body>
 </html>
