--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         <button
           class="float-end border-2 rounded"
           type="submit"
-          onclick="addBook()"
+          id="form"
         >
           Add New Book
         </button>
